# bmpDrawer

./: .gitignore  CMakeLists.txt  README.MD
headers/: BMPFile.hpp  bmpDrawer.hpp  bmpPicturePrinter.hpp
src/: BMPFile.cpp  bmpDrawer.cpp  bmpPicturePrinter.cpp
test/: test_bmpfile.cpp
